# distributed

./: .cirun.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  codecov.yml  colour_demo.py  conftest.py  demo1.py  demo2.py  dev-requirements.txt  dot_product.ipynb  inproc-bench.py  list_reproducer.py  pi-Copy1.ipynb  pi.ipynb  pixi.toml  pyproject.toml  pytest.ini  repro2.py  reproducer.py  requirements.txt  sec.ipynb  sec1.ipynb  setup.cfg  setup.py  test1.py  test_report.html  (+2 more)
.circleci/: config.yml  environment-3.6.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: additional.yml  cancel.yml  ci-docs.yaml  ci-linux.yaml  ci-macos.yaml  ci-pre-commit.yml  ci-windows.yaml  ci.yaml  conda.yml  do-not-merge.yml  ipv6_debug.yaml  ipython_miniconda.yaml  ipython_miniforge.yaml  ipywidgets_mamba.yaml  publish-test-results.yaml  release-drafter.yml  release-publish.yml  ssh_debug.yaml  ssh_debug.yaml.donotrun  stale-issues.yml  tag-merge-requests.yml  test-report.yaml  test_memory.yaml  tests-gpu.yaml  tests-macos.yaml  tests.yaml  torture-test.yaml  update-gpuci.yaml  upstream.yml  wheels.yml
continuous_integration/: Dockerfile  condarc  demo_ipython-5.3.4.yaml  demo_ipython-5.5.0.yaml  demo_ipython.yaml  environment-3.10.yaml  environment-3.11.yaml  environment-3.12.yaml  environment-3.13.yaml  environment-3.14.yaml  environment-3.14t.yaml  environment-3.6.yaml  environment-3.7.yaml  environment-3.8-gpu.yaml  environment-3.8.yaml  environment-3.9.yaml  environment-mindeps-optional.yaml  environment-mindeps.yaml  environment-windows.yml  environment.yml  generate_test_cert.sh  run-hdfs.sh  run_tests.cmd  setup_conda_environment.cmd
continuous_integration/docker-files/: start.sh
continuous_integration/gpuci/: axis.yaml  build.sh
continuous_integration/recipe/: meta.yaml
continuous_integration/scripts/: conda_build.sh  host_info.py  install.sh  parse_pytest_stdout.py  parse_stdout.py  post_test_ci.sh  run_tests.sh  set_ulimit.sh  setup_ssh.sh  test-report-environment.yml  test_report.py
continuous_integration/travis/: install.sh  run_tests.sh
dask-apps/: cudf_merge_mpi.py  cupy_sum_mpi.py
demo/: demo.py  demo2.py
distributed/: __init__.py  _async_taskgroup.py  _cancellation.py  _coassignment_group.py  _concurrent_futures_thread.py  _cy_schedulerstate.c  _ipython_utils.py  _signals.py  _stories.py  _version.py  _windows_net_io.py  active_memory_manager.py  actor.py  annotations.py  asyncio.py  batched.py  bridge.py  broker.py  center.py  cfexecutor.py  channels.py  chaos.py  checkpoint.py  client.py  cluster_dump.py  collections.py  compatibility.py  condition.py  config.py  config.yaml  context_vars.py  core.py  counter.py  dashboard.yaml  debugpy.py  diskutils.py  distributed-schema.yaml  distributed.yaml  dynamic_tasks.py  environments.py  (+65 more)
distributed/bokeh/: __init__.py  application.py  components.py  core.py  export_tool.py  main.html  memory-usage.py  processing-stacks.py  progress_bar.py  proxy_html.py  resource-profiles.py  scheduler.py  scheduler_html.py  status_monitor.py  task-progress.py  task-stream.py  task.html  task_stream.py  template.html  utils.py  worker-table.py  worker.py  worker_html.py  worker_monitor.py  worker_server.py
distributed/cli/: __init__.py  dask_cluster.py  dask_job.py  dask_mpi.py  dask_remote.py  dask_scheduler.py  dask_spec.py  dask_spec_worker.py  dask_ssh.py  dask_submit.py  dask_worker.py  dscheduler.py  utils.py
distributed/comm/: __init__.py  _asyncio_utils.py  addressing.py  asyncio.py  asyncio_tcp.py  batched.py  core.py  inproc.py  mpi.py  netutil.py  registry.py  tcp.py  transports.py  ucx.py  utils.py  ws.py  zmq.py  zmqimpl.py
distributed/dashboard/: components.py  core.py  export_tool.py  scheduler.py  scheduler_html.py  theme.yaml  utils.py  worker.py  worker_html.py
distributed/deploy/: __init__.py  adaptive.py  adaptive_core.py  cluster.py  core.py  cuda.py  discovery.py  heterogeneous.py  local.py  local_env.py  old_ssh.py  proxy.py  runner.py  spec.py  ssh.py  ssh2.py  subprocess.py  utils.py  utils_test.py  x.html
distributed/diagnostics/: __init__.py  cluster_dump.py  cudf.py  eventstream.py  graph_layout.py  memory_sampler.py  memray.py  nvml.py  plugin.py  profile.py  progress.py  progress_stream.py  progressbar.py  rmm.py  scheduler.py  status_application.py  status_monitor.py  task_stream.py  tg_graph_utils.py  tracer.py  websocket.py  worker_monitor.py  worker_plugin.py
distributed/http/: __init__.py  core.py  health.py  prometheus.py  proxy.py  routing.py  scheduler.py  statics.py  template.html  utils.py  worker.py
distributed/plugins/: autorestrictor.py
distributed/protocol/: __init__.py  arrow.py  compression.py  computation.py  core.py  cuda.py  cudf.py  cupy.py  h5py.py  highlevelgraph.py  keras.py  msgpack.py  netcdf4.py  numba.py  numpy.py  pandas.py  pickle.py  polars.py  rmm.py  scipy.py  serialize.py  shared.py  skorch.py  sparse.py  torch.py  utils.py  utils_test.py
distributed/proxy/: core.py  proxy_html.py
distributed/serialize/: __init__.py  core.py  numpy.py
distributed/shuffle/: __init__.py  _arrow.py  _buffer.py  _comms.py  _core.py  _disk.py  _exceptions.py  _limiter.py  _memory.py  _merge.py  _multi_comm.py  _multi_file.py  _pickle.py  _rechunk.py  _scheduler_extension.py  _scheduler_plugin.py  _shuffle.py  _shuffle_array.py  _shuffle_extension.py  _storage.py  _utils.py  _worker_extension.py  _worker_plugin.py  arrow.py  common.py  graph.py  multi_comm.py  multi_file.py  scatter.py  shuffle-design.md  shuffle.py  shuffle_extension.py  shuffle_scheduler.py  shuffle_worker.py
distributed/submit/: remote_cli.py  remote_client.py  submit_cli.py
distributed/tests/: .#test_client.py  make_tls_certs.py  py3_test_asyncio.py  py3_test_client.py  py3_test_pubsub.py  py3_test_utils_test.py  test.key  test.pem  test1.py  (+116 more)
docs/: Makefile  release-procedure.md  requirements.txt
(+304 files in other folders)
