[build-system]
requires = ["setuptools>=80", "setuptools-scm>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed"
description = "Distributed scheduler for Dask"
maintainers = [{ name = "Matthew Rocklin", email = "mrocklin@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "click >= 8.0",
    "cloudpickle >= 3.0.0",
    "dask >=2026.1.2,<2026.1.3",
    "jinja2 >= 2.10.3",
    "locket >= 1.0.0",
    "msgpack >= 1.0.2",
    "packaging >= 20.0",
    "psutil >= 5.8.0",
    "pyyaml >= 5.4.1",
    "sortedcontainers >= 2.0.5",
    "tblib >= 1.6.0,!=3.2.0,!=3.2.1",
    "toolz >= 0.12.0",
    "tornado >= 6.2.0",
    "urllib3 >= 1.26.5",
    "zict >= 3.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://distributed.dask.org"
Source = "https://github.com/dask/distributed"

[project.entry-points.dask_cli]
scheduler = "distributed.cli.dask_scheduler:main"
worker = "distributed.cli.dask_worker:main"
ssh = "distributed.cli.dask_ssh:main"
spec = "distributed.cli.dask_spec:main"

[project.scripts]
dask-ssh = "distributed.cli.dask_ssh:main"
dask-scheduler = "distributed.cli.dask_scheduler:main"
dask-worker = "distributed.cli.dask_worker:main"

[tool.setuptools.packages.find]
exclude = ["*tests*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["templates/index.html", "template.html"]
distributed = ["http/templates/*.html", "py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["B", "TID", "I", "UP", "RUF"]
ignore = [
    "B011",   # Do not `assert False`, raise `AssertionError()`
    "B018",   # Found useless expression
    "B028",   # FIXME: No explicit `stacklevel` keyword argument found
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "B905",   # `zip()` without an explicit `strict=` parameter
    "F841",   # Local variable `futures` is assigned to but never used
    "E402",   # Module level import not at top of file
    "E714",   # Test for object identity should be `is not`
    "E721",   # Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks
    "E741",   # Ambiguous variable name: `l`
    "UP031",  # TODO: apply this rule
    "RUF001", # String contains ambiguous letter
    "RUF002", # Docstring contains ambiguous letter
    "RUF005", # Consider unpacking operator instead of concatenation
    "RUF006", # Store a reference to the return value of `asyncio.ensure_future`
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015", # Prefer `next(iter(...))` over single element slice
    "RUF018", # Avoid assignment expressions in `assert` statements
    "RUF021", # Parenthesize `a and b` expressions when chaining `and` and `or` together, to make the precedence clear
    "RUF022", # `__all__` is not sorted
    "RUF023", # `__slots__` is not sorted
    "RUF043", # Pattern passed to `match=` contains metacharacters but is neither escaped nor raw
    "RUF059", # Unpacked variable is never used
]

[tool.ruff.lint.extend-per-file-ignores]
"**__init__.py" = ["F401", "F811"]
"distributed/shuffle/tests/test_shuffle.py" = ["F601"]
"distributed/utils.py" = ["F821"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "distributed",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"distributed" = ["dask", "zict"]

[tool.setuptools_scm]
version_file = "distributed/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = '''
-v -rsfE
--durations=20
--color=yes
--ignore=continuous_integration
--ignore=docs
--ignore=.github
--strict-markers
--strict-config
--cov-config=pyproject.toml
-p no:asyncio
-p no:legacypath'''
filterwarnings = [
    "error",
    # xref: https://github.com/jupyter/jupyter_core/pull/292
    # xref: https://github.com/jupyter/jupyter_core/issues/309
    '''ignore:Jupyter is migrating its paths to use standard platformdirs''',
    # https://github.com/dask/dask-expr/issues/945
    '''ignore:dask_expr does not support the DataFrameIOFunction''',
    '''ignore:Please use `dok_matrix` from the `scipy\.sparse` namespace, the `scipy\.sparse\.dok` namespace is deprecated.:DeprecationWarning''',
    '''ignore:elementwise comparison failed. this will raise an error in the future:DeprecationWarning''',
    '''ignore:unclosed <socket\.socket.*:ResourceWarning''',
    '''ignore:unclosed context <zmq\.asyncio\.Context\(\).*:ResourceWarning''',
    '''ignore:unclosed event loop <_(Unix|Windows)SelectorEventLoop.*:ResourceWarning''',
    '''ignore:unclosed file <_io.BufferedWriter.*:ResourceWarning''',
    '''ignore:unclosed file <_io.TextIOWrapper.*:ResourceWarning''',
    '''ignore:unclosed transport <_SelectorSocketTransport.*:ResourceWarning''',
    '''ignore:unclosed transport <asyncio\.sslproto\..*:ResourceWarning''',
    '''ignore:unclosed cluster SSHCluster.*:ResourceWarning''',
    '''ignore:Couldn't detect a suitable IP address for reaching '2001.4860.4860..8888', defaulting to hostname. \[Errno 65\] No route to host:RuntimeWarning''',
    '''ignore:Dashboard and Scheduler are using the same server on port.*:RuntimeWarning''',
    '''ignore:coroutine 'BaseTCPConnector.connect' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'Client\._start' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'ConnectionPool._connect' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'PooledRPCCall\.__getattr__\.<locals>\.send_recv_from_rpc' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'Scheduler\.restart' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'Semaphore._refresh_leases' was never awaited:RuntimeWarning''',
    '''ignore:coroutine 'ServerSession\.with_document_locked' was never awaited''',
    '''ignore:overflow encountered in long_scalars:RuntimeWarning''',
    '''ignore:Creating scratch directories is taking a surprisingly long time.*:UserWarning''',
    '''ignore:Scheduler already contains a plugin with name nonidempotentplugin. overwriting:UserWarning''',
    '''ignore:Increasing number of chunks by factor of 20::dask.array.core.PerformanceWarning''',
    '''ignore::distributed.versions.VersionMismatchWarning''',
    '''ignore:(?s)Exception in thread.*old_ssh.*channel\.send\(b"\\x03"\).*Socket is closed:pytest.PytestUnhandledThreadExceptionWarning''',
    '''ignore:(?s)Exception in thread.*paramiko\.ssh_exception\.NoValidConnectionsError:pytest.PytestUnhandledThreadExceptionWarning''',
    '''ignore:(?s)Exception ignored in. <Finalize object, dead>.*sem_unlink.*FileNotFoundError:pytest.PytestUnraisableExceptionWarning''',
    '''ignore:(?s)Exception ignored in. <coroutine object Scheduler\.add_worker.*in handle_worker.*Event loop is closed:pytest.PytestUnraisableExceptionWarning''',
    '''ignore:(?s)Exception ignored in. <function Client\.__del__.*RuntimeError. IOLoop is closed:pytest.PytestUnraisableExceptionWarning''',
    '''ignore:notifyAll\(\) is deprecated, use notify_all\(\) instead:DeprecationWarning:paramiko''',
    '''ignore:setDaemon\(\) is deprecated, set the daemon attribute instead:DeprecationWarning:paramiko''',
    '''ignore:`np.bool8` is a deprecated alias for `np.bool_`''',
    '''ignore:is_sparse is deprecated and will:FutureWarning''',
    # Need Tornado >=6.4
    '''ignore:datetime\.datetime\.utc(fromtimestamp|now)\(\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning:tornado''',
    # https://github.com/dateutil/dateutil/issues/1284
    '''ignore:datetime\.datetime\.utc(fromtimestamp|now)\(\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning:dateutil''',
    '''ignore:the matrix subclass is not the recommended way''',
    '''ignore:The current Dask DataFrame implementation is deprecated.*:DeprecationWarning''',
]
minversion = "6"
markers = [
    "ci1: marks tests as belonging to 1 out of 2 partitions to run on CI ('-m \"not ci1\"' for second partition)",
    "extra_packages: marks tests that require a special dependency to run.",
    "slow: marks tests as slow (deselected by default",                                                                            # select with '--runslow')
    "avoid_ci: marks tests as flaky or broken on CI on all OSs",
    "ipython: marks tests as exercising IPython",
    "gpu: marks tests we want to run on GPUs",
    "leaking: ignore leaked resources",                                                                                            # see pytest_resourceleaks.py for usage
    "workerstate: deterministic test for the worker state machine. Automatically applied to all tests that use the 'ws' fixture.",
]
# pytest-timeout settings
# 'thread' kills off the whole test suite. 'signal' only kills the offending test.
# However, 'signal' doesn't work on Windows (due to lack of SIGALRM).
# The CI script modifies this config file on the fly on Linux and MacOS.
timeout_method = "thread"
# This should not be reduced; Windows CI has been observed to be occasionally
# exceptionally slow.
timeout = 300

[tool.mypy]
python_version = "3.10"
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = "linux"
# platform = win32
# platform = darwin
allow_incomplete_defs = false
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# FIXME must clean these modules up
# Also look for 'mypy: disable-error-code' at the top of modules
module = ["distributed.client", "distributed.worker"]
allow_incomplete_defs = true

[[tool.mypy.overrides]]
# Recent or recently overhauled modules featuring stricter validation
module = [
    "distributed.active_memory_manager",
    "distributed.scheduler",
    "distributed.spans",
    "distributed.system_monitor",
    "distributed.worker_memory",
    "distributed.worker_state_machine",
    "distributed.config",
    "distributed.shuffle.*",
]
allow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["distributed.shuffle.tests.*"]
allow_untyped_defs = true

[tool.codespell]
ignore-words-list = "statics"
skip = "docs/source/changelog.rst"


[tool.coverage.run]
source = ["distributed"]
omit = [
    "distributed/tests/test*",
    "distributed/*/tests/test*",
    "distributed/cli/*",
    "distributed/deploy/ssh.py",
    "distributed/_version.py",
    "distributed/pytest_resourceleaks.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # re-enable the standard pragma
    "pragma: nocover",
    "pragma: no cover",
    # exclude nvml calls
    '[\s(.]nvml[\s(.]',
    '[\s(.]pynvml[\s(.]',
    # exclude LOG_PDB
    "LOG_PDB",
    # always ignore type checking blocks
    "TYPE_CHECKING",
    "except ImportError",
    "@overload",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "coverage_html_report"
