[metadata]
name = distributed
description = Distributed scheduler for Dask
url = https://distributed.dask.org
project_urls =
    Source=https://github.com/dask/distributed
maintainer = Matthew Rocklin
maintainer_email = mrocklin@gmail.com
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
long_description = file: README.rst

[options]
python_requires = >=3.8
include_package_data = True
install_requires = file: requirements.txt
packages = find:
zip_safe = False

[options.packages.find]
exclude = *tests*

[options.package_data]
* =
    templates/index.html
    template.html
distributed =
    http/templates/*.html
    py.typed

[options.entry_points]
console_scripts =
    dask-ssh=distributed.cli.dask_ssh:main
    dask-scheduler=distributed.cli.dask_scheduler:main
    dask-worker=distributed.cli.dask_worker:main
dask_cli =
    scheduler=distributed.cli.dask_scheduler:main
    worker=distributed.cli.dask_worker:main
    ssh=distributed.cli.dask_ssh:main
    spec=distributed.cli.dask_spec:main

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after commas here
exclude = __init__.py,versioneer.py,distributed/_concurrent_futures_thread.py
ignore =
    # Ignores below are aligned with black https://github.com/psf/black/blob/main/.flake8
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line too long, ignored in favor of B950
    E501
    # Line break occurred before a binary operator
    W503
    # Line too long
    B950
    # No explicit stacklevel in warnings.warn. FIXME we should correct this in the code
    B028

per-file-ignores =
    **/tests/*:
        # Module level import not at top of file (to silence on pytest.importorskip)
        # See https://github.com/PyCQA/pycodestyle/issues/472
        E402,
        # Do not use variables named 'I', 'O', or 'l'
        E741,
        # Local variable name is assigned to but never used
        F841,
        # Do not call assert False since python -O removes these calls
        B011,

# B950 will only trigger at 88
max-line-length = 80

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,DISTRIBUTED,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = distributed
known_distributed = dask,zict
add_imports = from __future__ import annotations

[versioneer]
VCS = git
style = pep440
versionfile_source = distributed/_version.py
versionfile_build = distributed/_version.py
tag_prefix =
parentdir_prefix = distributed-

[tool:pytest]
addopts =
    -v -rsxfE
    --durations=20
    --color=yes
    --ignore=continuous_integration
    --ignore=docs
    --ignore=.github
    --strict-markers
    --strict-config
    -p no:asyncio
    -p no:legacypath
filterwarnings =
    error
    ignore:Please use `dok_matrix` from the `scipy\.sparse` namespace, the `scipy\.sparse\.dok` namespace is deprecated.:DeprecationWarning
    ignore:elementwise comparison failed. this will raise an error in the future:DeprecationWarning
    ignore:unclosed <socket\.socket.*:ResourceWarning
    ignore:unclosed context <zmq\.asyncio\.Context\(\).*:ResourceWarning
    ignore:unclosed event loop <_(Unix|Windows)SelectorEventLoop.*:ResourceWarning
    ignore:unclosed file <_io.BufferedWriter.*:ResourceWarning
    ignore:unclosed file <_io.TextIOWrapper.*:ResourceWarning
    ignore:unclosed transport <_SelectorSocketTransport.*:ResourceWarning
    ignore:unclosed transport <asyncio\.sslproto\..*:ResourceWarning
    ignore:unclosed cluster SSHCluster.*:ResourceWarning
    ignore:Couldn't detect a suitable IP address for reaching '2001.4860.4860..8888', defaulting to hostname. \[Errno 65\] No route to host:RuntimeWarning
    ignore:Dashboard and Scheduler are using the same server on port.*:RuntimeWarning
    ignore:coroutine 'BaseTCPConnector.connect' was never awaited:RuntimeWarning
    ignore:coroutine 'Client\._start' was never awaited:RuntimeWarning
    ignore:coroutine 'ConnectionPool._connect' was never awaited:RuntimeWarning
    ignore:coroutine 'PooledRPCCall\.__getattr__\.<locals>\.send_recv_from_rpc' was never awaited:RuntimeWarning
    ignore:coroutine 'Scheduler\.restart' was never awaited:RuntimeWarning
    ignore:coroutine 'Semaphore._refresh_leases' was never awaited:RuntimeWarning
    ignore:coroutine 'ServerSession\.with_document_locked' was never awaited
    ignore:overflow encountered in long_scalars:RuntimeWarning
    ignore:Creating scratch directories is taking a surprisingly long time.*:UserWarning
    ignore:Scheduler already contains a plugin with name nonidempotentplugin. overwriting:UserWarning
    ignore:Increasing number of chunks by factor of 20::dask.array.core.PerformanceWarning
    ignore::distributed.versions.VersionMismatchWarning
    ignore:(?s)Exception in thread.*old_ssh.*channel\.send\(b"\\x03"\).*Socket is closed:pytest.PytestUnhandledThreadExceptionWarning
    ignore:(?s)Exception in thread.*paramiko\.ssh_exception\.NoValidConnectionsError:pytest.PytestUnhandledThreadExceptionWarning
    ignore:(?s)Exception ignored in. <Finalize object, dead>.*sem_unlink.*FileNotFoundError:pytest.PytestUnraisableExceptionWarning
    ignore:(?s)Exception ignored in. <coroutine object Scheduler\.add_worker.*in handle_worker.*Event loop is closed:pytest.PytestUnraisableExceptionWarning
    ignore:(?s)Exception ignored in. <function Client\.__del__.*RuntimeError. IOLoop is closed:pytest.PytestUnraisableExceptionWarning
    ignore:notifyAll\(\) is deprecated, use notify_all\(\) instead:DeprecationWarning:paramiko
    ignore:setDaemon\(\) is deprecated, set the daemon attribute instead:DeprecationWarning:paramiko
    ignore:`np.bool8` is a deprecated alias for `np.bool_`
minversion = 6
markers =
    ci1: marks tests as belonging to 1 out of 2 partitions to run on CI ('-m "not ci1"' for second partition)
    slow: marks tests as slow (deselected by default; select with '--runslow')
    avoid_ci: marks tests as flaky or broken on CI on all OSs
    ipython: marks tests as exercising IPython
    gpu: marks tests we want to run on GPUs
    leaking: ignore leaked resources; see pytest_resourceleaks.py for usage
    workerstate: deterministic test for the worker state machine. Automatically applied to all tests that use the 'ws' fixture.

# pytest-timeout settings
# 'thread' kills off the whole test suite. 'signal' only kills the offending test.
# However, 'signal' doesn't work on Windows (due to lack of SIGALRM).
# The CI script modifies this config file on the fly on Linux and MacOS.
timeout_method = thread
# This should not be reduced; Windows CI has been observed to be occasionally
# exceptionally slow.
timeout = 300

[mypy]
# Silence errors about Python 3.9-style delayed type annotations on Python 3.8
python_version = 3.9
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = linux
# platform = win32
# platform = darwin
allow_incomplete_defs = false
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# FIXME must clean these modules up
# Also look for 'mypy: disable-error-code' at the top of modules
[mypy-distributed.client]
allow_incomplete_defs = true
[mypy-distributed.scheduler]
allow_incomplete_defs = true
[mypy-distributed.worker]
allow_incomplete_defs = true

# Recent or recently overhauled modules featuring stricter validation
[mypy-distributed.active_memory_manager]
allow_untyped_defs = false
[mypy-distributed.system_monitor]
allow_untyped_defs = false
[mypy-distributed.worker_memory]
allow_untyped_defs = false
[mypy-distributed.worker_state_machine]
allow_untyped_defs = false
[mypy-distributed.shuffle.*]
allow_untyped_defs = false
[mypy-distributed.shuffle.tests.*]
allow_untyped_defs = true

[codespell]
ignore-words-list = statics
skip = docs/source/changelog.rst
